[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
    {name = "ocussy", email = "ocussy@42.fr"},
]
description = "A sample test package"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"